# pytypeinfo

./: blogpost.md  pyproject.toml  readme.md
examples/: typeinfo_example.py
src/pytypehintcheck/: __init__.py  type_info.py
src/pytypeinfo/: __init__.py  type_info.py  typing.py
tests/: test_annotated.py  test_callable.py  test_classVar.py  test_collection.py  test_common.py  test_isAny.py  test_isType.py  test_literal.py  test_map.py  test_mapping.py  test_typeVar.py  test_types.py  test_typing.py  test_union.py
